DCHECK -> LOG_IF in payment request shipping address

BUG=721502

Review-Url: https://codereview.chromium.org/2875103003
Cr-Commit-Position: refs/heads/master@{#471091}